--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,12 @@ AllCops:
   NewCops: enable
   TargetRubyVersion: 3.2
 
+Layout/LineLength:
+  Max: 120
+
+Style/SignalException:
+  EnforcedStyle: semantic
+
 Style/StringLiterals:
   Enabled: true
   EnforcedStyle: double_quotes
@@ -13,6 +19,3 @@ Style/StringLiterals:
 Style/StringLiteralsInInterpolation:
   Enabled: true
   EnforcedStyle: double_quotes
-
-Layout/LineLength:
-  Max: 120
