--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,6 +9,9 @@ AllCops:
 Layout/LineLength:
   Max: 120
 
+Style/Documentation:
+  Enabled: false
+
 Style/SignalException:
   EnforcedStyle: semantic
 
